fix: Increase spinner overlay z-index

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,7 +8,7 @@ body {
 }
 
 .spinner-overlay {
-  z-index: 1000;
+  z-index: 2000;
   pointer-events: none;
   position: absolute;
   top: 50%;
